--- a/css/scss/share.scss
+++ b/css/scss/share.scss
@@ -26,13 +26,14 @@
 
 .boton {
     display: block;
-    margin: auto;
+    text-align: center;
     background: $naranja;
     border: none;
-    font-size: 18px;
-    padding: 20px 50px;
+    font-size: 16px;
+    padding: 20px 45px;
     color: #fff;
     border-radius: 10px;
+    margin: 10px 0;
     &:hover {
         cursor: pointer;
     }
@@ -43,5 +44,16 @@
         font-size: 14px;
         padding: 10px 25px;
         width: 100%;
+    }
+}
+
+
+
+
+.menu-responsive {
+    opacity: 0;
+    cursor: pointer;
+    @include media(sm) {
+        opacity: 1;
     }
 }
