agregado menu responsive

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,6 +23,40 @@
   background: #724566;
 }
 
+.boton {
+  display: block;
+  text-align: center;
+  background: #ff9f00;
+  border: none;
+  font-size: 16px;
+  padding: 20px 45px;
+  color: #fff;
+  border-radius: 10px;
+  margin: 10px 0;
+}
+.boton:hover {
+  cursor: pointer;
+}
+@media (min-width: 320px) and (max-width: 768PX) {
+  .boton {
+    margin: 10px 0;
+    border-radius: 8px;
+    font-size: 14px;
+    padding: 10px 25px;
+    width: 100%;
+  }
+}
+
+.menu-responsive {
+  opacity: 0;
+  cursor: pointer;
+}
+@media (min-width: 320px) and (max-width: 768PX) {
+  .menu-responsive {
+    opacity: 1;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -35,21 +69,45 @@
   width: 95%;
   margin: auto;
   display: grid;
-  grid-template-columns: 15% 1fr 25%;
+  grid-template-columns: 20% 1fr;
   grid-template-rows: 100vh;
 }
-@media (min-width: 300px) and (max-width: 400px) {
+@media (min-width: 320px) and (max-width: 768PX) {
   .container {
-    grid-template-columns: 15% 60% 25%;
+    grid-template-columns: 1fr;
+    position: relative;
   }
 }
 .container .dashboard {
   color: #fff;
   background: #52a589;
 }
+@media (min-width: 320px) and (max-width: 768PX) {
+  .container .dashboard {
+    transform: translate(-100%);
+    position: absolute;
+    opacity: 0.9;
+    transition: 0.3s ease all;
+    height: 100vh;
+  }
+}
+.container .dashboard.active {
+  display: block;
+  transform: translate(0%);
+}
 .container .dashboard .head-title {
   font-size: 19px;
   font-weight: bold;
+  padding: 10px 20px;
+}
+@media (min-width: 320px) and (max-width: 768PX) {
+  .container .dashboard .head-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    padding: 20px;
+  }
 }
 .container .dashboard .profile {
   margin: 15px auto;
@@ -62,9 +120,20 @@
   font-weight: normal;
 }
 .container .dashboard .menu .enlace {
-  transition: 0.2s ease all;
+  transition: 0.3s ease all;
   display: flex;
   padding: 15px;
+}
+@media (min-width: 320px) and (max-width: 768PX) {
+  .container .dashboard .menu .enlace:hover {
+    border-radius: 0px;
+    cursor: pointer;
+    background: #f4f5f9;
+  }
+  .container .dashboard .menu .enlace:hover i,
+.container .dashboard .menu .enlace:hover a {
+    color: #000;
+  }
 }
 .container .dashboard .menu .enlace:hover {
   border-radius: 10px;
@@ -97,13 +166,25 @@
   align-items: center;
   padding: 10px 15px;
 }
+@media (min-width: 320px) and (max-width: 768PX) {
+  .contenido .header .titulo {
+    display: flex;
+  }
+}
 .contenido .header .titulo a {
+  margin: 0px 10px;
   color: #3d1d31;
   font-weight: bold;
   font-size: 18px;
 }
+@media (min-width: 320px) and (max-width: 768PX) {
+  .contenido .header .titulo a {
+    display: block;
+    font-size: 14px;
+  }
+}
 .contenido .header .buscar input {
-  width: 500px;
+  width: 80%;
   border: none;
   padding: 5px 20px;
   border-radius: 3px;
@@ -113,17 +194,20 @@
   padding: 10px;
   background: #f4f5f9;
 }
+.contenido .quick-access .title h4 {
+  margin: 10px 0;
+}
 .contenido .quick-access .file-group {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
 }
-@media (min-width: 400px) and (max-width: 600px) {
+@media (min-width: 768PX) and (max-width: 1024PX) {
   .contenido .quick-access .file-group {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-@media (min-width: 300px) and (max-width: 400px) {
+@media (min-width: 320px) and (max-width: 768PX) {
   .contenido .quick-access .file-group {
     grid-template-columns: 1fr;
   }
@@ -175,14 +259,14 @@
   gap: 15px;
   background: #f4f5f9;
 }
-@media (min-width: 400px) and (max-width: 600px) {
+@media (min-width: 768PX) and (max-width: 1024PX) {
   .contenido .folders .group-folders {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (min-width: 300px) and (max-width: 400px) {
+@media (min-width: 320px) and (max-width: 768PX) {
   .contenido .folders .group-folders {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 .contenido .folders .group-folders .folder {
@@ -224,6 +308,17 @@
   background: #eceff8;
   padding: 20px;
 }
+@media (min-width: 320px) and (max-width: 768PX) {
+  .informacion {
+    padding: 10px;
+  }
+}
+.informacion .title {
+  margin: 20px 0;
+  font-weight: bold;
+  font-size: 14px;
+  text-transform: uppercase;
+}
 .informacion hr {
   margin: 20px 0;
   color: #cacaca;
@@ -258,10 +353,19 @@
 .informacion .tipo {
   display: flex;
   padding: 5px;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  align-content: center;
+}
+@media (min-width: 320px) and (max-width: 768PX) {
+  .informacion .tipo {
+    padding: 0;
+    justify-content: space-around;
+    margin: 10px 0;
+  }
 }
 .informacion .tipo .icono {
+  margin-right: 5px;
   border-radius: 15px;
 }
 .informacion .tipo .icono:hover {
@@ -277,6 +381,10 @@
   font-weight: normal;
   font-size: 14px;
 }
+.informacion .tipo .name .title-square {
+  color: #444;
+  font-size: 14px;
+}
 .informacion .tipo .name span {
   font-size: 11px;
   color: #cacaca;
@@ -288,18 +396,14 @@
   color: #cacaca;
   border-radius: 5px;
 }
-.informacion .boton {
-  display: block;
-  margin: auto;
-  background: #ff9f00;
-  border: none;
-  font-size: 18px;
-  padding: 20px 50px;
-  color: #fff;
-  border-radius: 10px;
+
+.container-info-folders {
+  display: flex;
 }
-.informacion .boton:hover {
-  cursor: pointer;
+@media (min-width: 320px) and (max-width: 768PX) {
+  .container-info-folders {
+    flex-direction: column;
+  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
